--- a/PLAttendance/MemberCollectionViewCell.xib
+++ b/PLAttendance/MemberCollectionViewCell.xib
@@ -4,34 +4,48 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MemberCollectionViewCell" customModule="PLAttendance" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="466" height="465"/>
+            <rect key="frame" x="0.0" y="0.0" width="189" height="161"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="466" height="465"/>
+                <rect key="frame" x="0.0" y="0.0" width="189" height="161"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Pl-Kq-JPR">
-                        <rect key="frame" x="0.0" y="0.0" width="466" height="465"/>
+                        <rect key="frame" x="0.0" y="0.0" width="189" height="161"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="멤버" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aP4-Vh-f8s">
-                                <rect key="frame" x="212" y="222" width="30" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="Sb8-Ib-xX6"/>
-                                    <constraint firstAttribute="width" constant="30" id="ceD-8f-dwu"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="jQ4-22-rXK">
+                                <rect key="frame" x="0.0" y="0.0" width="189" height="161"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vY0-LV-QoU">
+                                        <rect key="frame" x="34.666666666666657" y="0.0" width="120" height="120"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="7GY-M3-eKO"/>
+                                            <constraint firstAttribute="height" constant="120" id="LbW-fb-yjf"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oif-We-qLb">
+                                        <rect key="frame" x="69.333333333333329" y="126" width="50.333333333333329" height="35"/>
+                                        <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="jQ4-22-rXK" secondAttribute="trailing" id="AiK-vV-BYs"/>
+                            <constraint firstItem="jQ4-22-rXK" firstAttribute="top" secondItem="8Pl-Kq-JPR" secondAttribute="top" id="ZA3-oc-hco"/>
+                            <constraint firstItem="jQ4-22-rXK" firstAttribute="leading" secondItem="8Pl-Kq-JPR" secondAttribute="leading" id="dgt-I0-qSq"/>
+                            <constraint firstAttribute="bottom" secondItem="jQ4-22-rXK" secondAttribute="bottom" id="eF7-Ih-cpt"/>
+                        </constraints>
                     </view>
                 </subviews>
             </view>
@@ -42,16 +56,13 @@
                 <constraint firstAttribute="trailing" secondItem="8Pl-Kq-JPR" secondAttribute="trailing" id="o6v-0t-XPQ"/>
                 <constraint firstItem="8Pl-Kq-JPR" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="rri-tf-xBm"/>
             </constraints>
-            <size key="customSize" width="466" height="465"/>
+            <size key="customSize" width="189" height="161"/>
             <connections>
-                <outlet property="mainLabel" destination="aP4-Vh-f8s" id="fQF-Fy-2B0"/>
+                <outlet property="backView" destination="8Pl-Kq-JPR" id="pyu-Tj-zdG"/>
+                <outlet property="mainLabel" destination="oif-We-qLb" id="8Sn-WC-9oY"/>
+                <outlet property="memberImage" destination="vY0-LV-QoU" id="jZ4-gD-Nd4"/>
             </connections>
-            <point key="canvasLocation" x="337.40458015267177" y="165.84507042253523"/>
+            <point key="canvasLocation" x="125.95419847328243" y="58.802816901408455"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
