--- a/PLAttendance/MemberCollectionViewCell.xib
+++ b/PLAttendance/MemberCollectionViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,18 +20,18 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Pl-Kq-JPR">
                         <rect key="frame" x="0.0" y="0.0" width="189" height="161"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="jQ4-22-rXK">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="jQ4-22-rXK">
                                 <rect key="frame" x="0.0" y="0.0" width="189" height="161"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vY0-LV-QoU">
-                                        <rect key="frame" x="34.666666666666657" y="0.0" width="120" height="120"/>
+                                        <rect key="frame" x="34.666666666666657" y="0.0" width="120" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="120" id="7GY-M3-eKO"/>
-                                            <constraint firstAttribute="height" constant="120" id="LbW-fb-yjf"/>
+                                            <constraint firstAttribute="height" constant="100" id="LbW-fb-yjf"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oif-We-qLb">
-                                        <rect key="frame" x="69.333333333333329" y="126" width="50.333333333333329" height="35"/>
+                                        <rect key="frame" x="69.333333333333329" y="102" width="50.333333333333329" height="59"/>
                                         <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -39,7 +40,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="jQ4-22-rXK" secondAttribute="trailing" id="AiK-vV-BYs"/>
                             <constraint firstItem="jQ4-22-rXK" firstAttribute="top" secondItem="8Pl-Kq-JPR" secondAttribute="top" id="ZA3-oc-hco"/>
@@ -65,4 +66,9 @@
             <point key="canvasLocation" x="125.95419847328243" y="58.802816901408455"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
